--- a/src_client_user/src/features/PostList/index.module.css
+++ b/src_client_user/src/features/PostList/index.module.css
@@ -25,16 +25,17 @@
 .post-list {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 0.2rem;
+    gap: 0.4rem;
 
     list-style: none;
 
-    padding: 0rem;
+    padding: 1rem 0.2rem;
     margin: 0rem;
 }
 
 .post {
-    padding: 0rem;
-    margin: 0rem;
+    display: flex;
+    justify-content: center;
+    
+    width: 100%;
 }
