--- a/src_client_user/src/components/Post/index.module.css
+++ b/src_client_user/src/components/Post/index.module.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 0.4rem;
+    gap: 0.6rem;
 
     border: 1px solid rgba(255, 255, 255, 1.0);
     border-radius: 0.5rem;
@@ -22,7 +22,7 @@
     font-size: 1.2rem;
     font-weight: bold;
     word-wrap: break-word;
-    color: white;
+    color: rgba(255, 255, 255, 1.0);
 
     padding: 0rem;
     margin: 0rem;
@@ -30,6 +30,21 @@
 
 .text {
     font-size: 1.1rem;
+    color: rgba(255, 255, 255, 1.0);
+
+    padding: 0rem;
+    margin: 0rem;
+}
+
+.dates {
+    display: flex;
+    flex-direction: column;
+    gap: 0.1rem;
+}
+
+.date-string {
+    font-size: 0.9rem;
+    color: rgba(255, 255, 255, 1.0);
 
     padding: 0rem;
     margin: 0rem;
