--- a/src_client_user/src/components/Post/index.module.css
+++ b/src_client_user/src/components/Post/index.module.css
@@ -9,8 +9,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    gap: 0.6rem;
+    gap: 0.8rem;
 
     border: 1px solid rgba(255, 255, 255, 1.0);
     border-radius: 0.5rem;
@@ -44,6 +43,22 @@
 
 .date-string {
     font-size: 0.9rem;
+    color: rgba(255, 255, 255, 1.0);
+
+    padding: 0rem;
+    margin: 0rem;
+}
+
+.bottom-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1.0rem;
+}
+
+.comment-count {
+    font-size: 1.0rem;
     color: rgba(255, 255, 255, 1.0);
 
     padding: 0rem;
