--- a/src_client_user/src/features/PostDetail/index.module.css
+++ b/src_client_user/src/features/PostDetail/index.module.css
@@ -13,6 +13,7 @@
 .title {
     font-size: 2.2rem;
     text-align: center;
+    word-wrap: break-word;
     color: rgba(255, 255, 255, 0.9);
 
     padding: 0rem;
@@ -22,8 +23,9 @@
 .text {
     align-self: center;
 
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     text-align: center;
+    word-wrap: break-word;
     color: rgba(255, 255, 255, 0.9);
 
     width: 100%;
@@ -34,19 +36,22 @@
     margin: 0rem;
 }
 
+.comment-list-container {
+    display: flex;
+    justify-content: center;
+}
+
 .comment-list {
     display: flex;
     flex-direction: column;
+    align-items: end;
     gap: 0.4rem;
 
     list-style: none;
 
-    padding: 1rem 0.2rem;
-    margin: 0rem;
-}
-
-.comment {
-    display: flex;
-    
     width: 100%;
+    max-width: 1000px;
+
+    padding: 0rem;
+    margin: 1rem 0.2rem;
 }
