--- a/src_client_user/src/features/PostDetail/components/Comment/index.module.css
+++ b/src_client_user/src/features/PostDetail/components/Comment/index.module.css
@@ -5,15 +5,24 @@
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: 1fr auto;
+    gap: 0.8rem 0.2rem;
 
     border: 1px solid rgba(255, 255, 255, 1.0);
     border-radius: 0.5rem;
 
     padding: 0.6rem;
     margin: 0rem;
+}
+
+.name-and-text {
+    grid-area: 1 / 1 / -1 / 1;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
 }
 
 .name {
@@ -27,6 +36,8 @@
 }
 
 .text {
+    place-self: start;
+
     font-size: 1.1rem;
     color: rgba(255, 255, 255, 1.0);
 
@@ -35,6 +46,8 @@
 }
 
 .dates {
+    grid-area: 1 / 2 / 1 / -1;
+
     display: flex;
     flex-direction: column;
     gap: 0.1rem;
@@ -48,10 +61,32 @@
     margin: 0rem;
 }
 
-.reply-count {
+.links {
+    grid-area: 2 / 2 / -1 / -1;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+}
+
+.reply-button {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 0.2rem;
+
+    font-size: 0.9rem;
+    color: rgba(255, 255, 255, 1.0);
+}
+
+.view-more-replies-anchor {
     font-size: 1.0rem;
     color: rgba(255, 255, 255, 1.0);
 
-    padding: 0rem;
-    margin: 0rem;
+    text-decoration: underline;
+}
+.view-more-replies-anchor:hover {
+    color: rgba(7, 173, 185, 1.0);
+    cursor:grab;
 }
