--- a/src_client_user/src/features/PostDetail/components/Comment/index.module.css
+++ b/src_client_user/src/features/PostDetail/components/Comment/index.module.css
@@ -18,7 +18,7 @@
 }
 
 .name-and-text {
-    grid-area: 1 / 1 / -1 / 1;
+    grid-area: 1 / 1 / 3 / 1;
 
     display: flex;
     flex-direction: column;
@@ -62,7 +62,7 @@
 }
 
 .links {
-    grid-area: 2 / 2 / -1 / -1;
+    grid-area: 2 / 2 / 3 / -1;
 
     display: flex;
     flex-direction: column;
@@ -89,4 +89,8 @@
 .view-more-replies-anchor:hover {
     color: rgba(7, 173, 185, 1.0);
     cursor:grab;
+}
+
+.comment-form {
+    grid-area: 3 / 1 / -1 / -1;
 }
