--- a/src_client_user/src/features/PostDetail/components/CommentForm/index.module.css
+++ b/src_client_user/src/features/PostDetail/components/CommentForm/index.module.css
@@ -24,6 +24,7 @@
 }
 
 .requirement-message {
+    color: rgba(255, 255, 255, 1.0);
     font-size: 0.85rem;
     font-weight: normal;
 
@@ -62,6 +63,8 @@
 .first-name,
 .last-name,
 .comment {
+    color: rgba(255, 255, 255, 1.0);
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -80,6 +83,7 @@
 .first-name input,
 .last-name input,
 .comment textarea {
+    color: rgb(0, 0, 0);
     background-color: rgba(255, 255, 255, 0.92);
 
     border: none;
@@ -109,4 +113,10 @@
     width: 100%;
     max-width: 10rem;
     height: 2rem;
+}
+
+.submit-button:focus {
+    background-color: rgba(214, 214, 214, 1.0);
+
+    outline: 2px solid rgba(255, 255, 255, 1.0);
 }
