--- a/src_client_user/src/features/PostDetail/index.module.css
+++ b/src_client_user/src/features/PostDetail/index.module.css
@@ -4,6 +4,28 @@
     gap: 1.0rem;
 }
 
+.return-button {
+    align-self: center;
+
+    color: rgb(0, 0, 0);
+    font-size: 0.9rem;
+    background-color: rgba(255, 255, 255, 1.0);
+
+    border: none;
+    border-radius: 0.3rem;
+    outline: 1px solid rgba(255, 255, 255, 1.0);
+
+    width: 100%;
+    max-width: 10rem;
+    height: 2rem;
+}
+
+.return-button:focus {
+    background-color: rgba(214, 214, 214, 1.0);
+
+    outline: 2px solid rgba(255, 255, 255, 1.0);
+}
+
 .post-information {
     display: flex;
     flex-direction: column;
