--- a/src_client_user/src/features/PostDetail/components/Comment/index.module.css
+++ b/src_client_user/src/features/PostDetail/components/Comment/index.module.css
@@ -6,7 +6,7 @@
 
 .container {
     display: grid;
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(2, auto);
     grid-template-columns: 1fr auto;
     gap: 0.8rem 0.2rem;
 
@@ -81,10 +81,16 @@
 }
 
 .view-more-replies-anchor {
+    grid-area: 3 / 1 / -1 / -1;
+    align-self: end;
+
     font-size: 1.0rem;
     color: rgba(255, 255, 255, 1.0);
 
     text-decoration: underline;
+
+    padding: 0rem;
+    margin: 0rem;
 }
 .view-more-replies-anchor:hover {
     color: rgba(7, 173, 185, 1.0);
