--- a/src_client_admin/src/index.css
+++ b/src_client_admin/src/index.css
@@ -1,3 +1,7 @@
+/* Material Symbols */
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,600,0,0');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,700,1,0&display=swap');
+
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -5,7 +9,7 @@
   
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: rgb(117, 42, 146);
+    background-color: rgb(22, 22, 22);
   
     font-synthesis: none;
     text-rendering: optimizeLegibility;
