--- a/src_client_admin/src/features/LoginForm/index.module.css
+++ b/src_client_admin/src/features/LoginForm/index.module.css
@@ -9,15 +9,13 @@
     display: flex;
     flex-direction: column;
     gap: 0.8rem;
-    
-    border: 1px solid rgba(255, 255, 255, 0.4);
-    border-radius: 0.5rem;
 
     width: auto;
-    padding: 1.0rem;
 }
 
 .requirement-message {
+    grid-area: 1 / 1 / 2 / -1;
+
     color: rgba(255, 255, 255, 1.0);
     font-size: 0.85rem;
     font-weight: normal;
@@ -28,19 +26,24 @@
 
 .form {
     display: grid;
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
     gap: 1.0rem 0.2rem;
+    
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 0.5rem;
+
+    padding: 1.0rem;
 }
 
 .form-fields {
-    grid-area: 1 / 1 / 2 / -1;
+    grid-area: 2 / 1 / 3 / -1;
 
     display: flex;
     gap: 0.4rem;
 }
 
 .submit-button {
-    grid-area: 2 / 1 / -1 / -1;
+    grid-area: 3 / 1 / -1 / -1;
 }
 
 .username,
@@ -125,4 +128,24 @@
 
 .error-item {
     color: rgba(255, 255, 255, 1.0);
+}
+
+.return-button {
+    color: rgb(0, 0, 0);
+    font-size: 0.9rem;
+    background-color: rgba(255, 255, 255, 1.0);
+
+    border: none;
+    border-radius: 0.3rem;
+    outline: 1px solid rgba(255, 255, 255, 1.0);
+
+    width: 100%;
+    max-width: 10rem;
+    height: 2rem;
+}
+
+.reply-button:focus {
+    background-color: rgba(214, 214, 214, 1.0);
+
+    outline: 2px solid rgba(255, 255, 255, 1.0);
 }
