Add delete button to comments
Also fixed comments displaying 'View more replies...' when they had no
replies

--- a/src_client_admin/src/features/PostDetail/components/Comment/index.module.css
+++ b/src_client_admin/src/features/PostDetail/components/Comment/index.module.css
@@ -69,7 +69,8 @@
     gap: 0.4rem;
 }
 
-.reply-button {
+.reply-button,
+.delete-button {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
