Add additional props to CommentForm component
Can now display a title on the CommentForm in addition to setting
default values on the form fields, which was needed for editing the
comment

--- a/src_client_admin/src/features/PostDetail/components/CommentForm/index.module.css
+++ b/src_client_admin/src/features/PostDetail/components/CommentForm/index.module.css
@@ -17,7 +17,16 @@
     padding: 1.0rem;
 }
 
-.top-row {
+.title {
+    color: rgba(255, 255, 255, 1.0);
+    font-size: 1.2rem;
+    font-weight: normal;
+
+    padding: 0rem;
+    margin: 0rem;
+}
+
+.close-button-and-requirement-message {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
