--- a/src_client_admin/src/features/PostList/index.module.css
+++ b/src_client_admin/src/features/PostList/index.module.css
@@ -22,6 +22,27 @@
     margin: 0rem;
 }
 
+.create-new-post-button {
+    align-self: center;
+
+    color: rgb(0, 0, 0);
+    font-size: 0.9rem;
+    background-color: rgba(255, 255, 255, 1.0);
+
+    border: none;
+    border-radius: 0.3rem;
+    outline: 1px solid rgba(255, 255, 255, 1.0);
+
+    width: 100%;
+    max-width: 10rem;
+    height: 2rem;
+}
+
+.post-form {
+    display: flex;
+    justify-content: center;
+}
+
 .post-list {
     display: flex;
     flex-direction: column;
